# chronulus-mcp

./: README.md  pyproject.toml  requirements.txt
src/chronulus_mcp/: __init__.py  __main__.py  estimator.py  io.py  types.py
src/chronulus_mcp/_assets/html/: binary_predictor_analysis.html
src/chronulus_mcp/agent/: forecaster.py  predictor.py
